@@ -1,600 +1,481 @@
 ---
 title: Java 开发环境配置详解与最佳实践
 description: 这篇文章详细介绍了 Java 开发环境的配置，包括在Windows、Linux、macOS及Docker环境中搭建Java开发环境的步骤。同时，分享了行业认可的最佳实践，帮助开发者从环境搭建开始就遵循专业标准。
+author: zhycn
 ---
 
 # Java 开发环境配置详解与最佳实践
 
-## 1. 前言
+## 1. Java 开发环境概述
 
-Java 开发环境的正确配置是编写高质量 Java 应用程序的基础基石。一个优化良好的开发环境不仅能提升编码效率，减少不必要的调试时间，还能确保应用程序在不同平台间的一致性表现。本文将全面详解如何在 Windows、Linux、macOS 及 Docker 环境中配置 Java 开发环境，并分享行业认可的最佳实践，帮助开发者从环境搭建开始就遵循专业标准。
+Java 开发环境的配置是每个 Java 程序员的首要任务，一个合理配置的环境能显著提高开发效率和项目可维护性。2025 年，Java 生态持续演进，JDK 21 已成为企业级开发的主流版本，带来了虚拟线程、模式匹配增强等革命性特性。本文将详细介绍 Windows、macOS、Linux 及 Docker 环境下的 Java 开发环境配置，并分享行业最佳实践。
 
-无论您是刚入门 Java 的新手还是经验丰富的开发者，本文都将为您提供有价值的参考。我们将涵盖从 JDK 选择、环境变量配置、IDE 优化到容器化部署的全流程，确保您能获得一个完整而系统的 Java 开发环境配置指南。
+### 1.1 JDK 选择建议
 
-## 2 JDK 选择与安装
+- **LTS 版本**：推荐选择 Java 11 或 Java 17 这些长期支持版本，适合企业级应用。
+- **最新版本**：JDK 21 (2023年9月发布) 提供了最新语言特性和性能优化。
+- **发行版选择**：
+  - Oracle JDK：官方版本，适合商业应用
+  - OpenJDK：开源版本，社区支持良好
+  - Temurin：AdoptOpenJDK 的延续，企业级应用推荐
+  - Zulu：Azul Systems 构建，全面测试验证
 
-### 2.1 JDK 版本选择策略
+### 1.2 IDE 选择
 
-Java 开发工具包（JDK）是 Java 开发的核心组件，选择适合自己的版本至关重要。目前主流的 JDK 版本包括：
+- **IntelliJ IDEA**（推荐）：功能强大，智能代码提示，丰富的插件生态系统
+- **Eclipse**：开源免费，插件丰富，适合 Java EE 开发
+- **VS Code**：轻量级编辑器，通过扩展支持 Java 开发
 
-- **Oracle JDK**：官方版本，过去曾有不同的许可证限制，但现在提供了免费的生产用途
-- **OpenJDK**：开源实现，是 Oracle JDK 的上游项目，大多数 Linux 发行版的默认选择
-- **Amazon Corretto**：亚马逊提供的免费、多平台的 OpenJDK 发行版
-- **Eclipse Temurin**：Eclipse 基金会提供的 OpenJDK 发行版
+### 1.3 多版本管理工具
 
-_表：主流 JDK 版本比较_
+- **SDKMAN**（Linux/macOS）：支持多个 JDK 版本切换
+- **Homebrew**（macOS）：方便的包管理工具，可安装多个 JDK 版本
+- **Windows Package Manager**（Windows）：Windows 平台的包管理工具
 
-| **JDK发行版**   | **许可证**   | **特点**           | **适用场景**         |
-| --------------- | ------------ | ------------------ | -------------------- |
-| Oracle JDK      | Oracle许可证 | 官方实现，性能优化 | 企业级应用，商业产品 |
-| OpenJDK         | GPLv2+CPE    | 开源社区驱动       | 开发环境，开源项目   |
-| Amazon Corretto | GPLv2+CPE    | 亚马逊长期支持     | AWS环境，企业部署    |
-| Eclipse Temurin | GPLv2+CPE    | 生态广泛兼容       | 跨平台开发，云原生   |
+## 2. Windows 环境配置
 
-对于新项目，建议选择**Java 11**或**Java 17**这两个 LTS（长期支持）版本，它们提供了更好的性能、安全性和功能支持。
+### 2.1 JDK 安装
 
-### 2.2 各平台 JDK 安装步骤
+1. 访问 [Oracle JDK 下载页面](https://www.oracle.com/java/technologies/downloads/) 或 [OpenJDK 发行版页面](https://jdk.java.net/)
+2. 选择最新版本的 JDK（推荐 JDK 21 或 JDK 17）
+3. 下载 Windows x64 安装程序（.msi 格式）
+4. 双击安装程序，按提示完成安装，记住安装路径（如 `C:\Program Files\Java\jdk-21`）
 
-#### Windows 平台安装
+### 2.2 环境变量配置
 
-1. 访问<https://www.oracle.com/java/technologies/javase-jdk11-downloads.html或OpenJDK网站下载Windows版本的JDK安装程序>
-2. 运行安装程序，按照向导完成安装。建议使用默认安装路径（如`C:\Program Files\Java\jdk-版本号\`），避免路径中包含空格或中文
-3. 记录 JDK 安装路径，后续配置环境变量时需要用到
+配置环境变量是 Windows 系统 Java 开发环境设置的关键步骤：
 
-#### macOS 平台安装
+1. 右击"我的电脑"，选择"属性" > "高级系统设置" > "环境变量"
+2. 在"系统变量"中新建 `JAVA_HOME` 变量：
+   - 变量名：`JAVA_HOME`
+   - 变量值：JDK 安装路径（如 `C:\Program Files\Java\jdk-21`）
 
-1. 使用 Homebrew 安装（推荐）：
+3. 编辑 `Path` 变量，添加两条新记录：
+   - `%JAVA_HOME%\bin`
+   - `%JAVA_HOME%\jre\bin`
 
-   ```bash
-   brew tap homebrew/cask-versions
-   brew install --cask temurin11
-   ```
+4. （可选）新建 `CLASSPATH` 变量：
+   - 变量名：`CLASSPATH`
+   - 变量值：`.;%JAVA_HOME%\lib\dt.jar;%JAVA_HOME%\lib\tools.jar;`
 
-2. 或从<https://www.oracle.com/java/technologies/javase-jdk11-downloads.html下载macOS版本的JDK安装包（.dmg文件）>
-3. 双击下载的.dmg文件，按照安装向导完成安装
+_表：Windows Java 环境变量配置摘要_
 
-#### Linux 平台安装
+| **变量名**  | **示例值**                     | **作用**               |
+| ----------- | ------------------------------ | ---------------------- |
+| `JAVA_HOME` | `C:\Program Files\Java\jdk-21` | 指定 JDK 安装根目录    |
+| `Path`      | `%JAVA_HOME%\bin;...`          | 使系统能找到 Java 命令 |
+| `CLASSPATH` | `.;%JAVA_HOME%\lib\dt.jar;...` | 指定类加载路径         |
 
-以 Ubuntu 为例，安装 OpenJDK：
+### 2.3 验证安装
+
+打开命令提示符（Win + R，输入 cmd），执行以下命令验证安装：
 
 ```bash
-# 更新包索引
-sudo apt update
+java -version
+javac -version
+```
 
-# 安装OpenJDK 11
-sudo apt install openjdk-11-jdk
+成功安装后，将显示类似以下信息：
+
+```
+java version "21.0.2" 2025-XX-XX LTS
+Java(TM) SE Runtime Environment (build 21.0.2+13-LTS-58)
+Java HotSpot(TM) 64-Bit Server VM (build 21.0.2+13-LTS-58, mixed mode, sharing)
+```
+
+### 2.4 IDE 安装与配置
+
+#### 2.4.1 IntelliJ IDEA 配置
+
+1. 下载并安装 IntelliJ IDEA（社区版免费，旗舰版功能更强大）
+2. 配置 JDK：File > Project Structure > SDKs > 添加 JDK
+3. 安装必备插件：Lombok、Spring Boot Helper、Docker Integration
+4. 性能优化：Help > Change Memory Settings（建议调整至 8GB）
+
+#### 2.4.2 Eclipse 配置
+
+1. 下载 Eclipse IDE for Java EE Developers
+2. 配置 JDK：Window > Preferences > Java > Installed JREs > Add
+3. 设置编码：Window > Preferences > General > Workspace，将"Text file encoding"改为 UTF-8
+
+## 3. macOS 环境配置
+
+### 3.1 JDK 安装
+
+#### 3.1.1 使用 Homebrew 安装（推荐）
+
+```bash
+# 安装 Homebrew（如果未安装）
+/bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
+
+# 查找可用 JDK 版本
+brew search openjdk
+
+# 安装 JDK 21
+brew install openjdk@21
+
+# 链接 JDK（使系统识别安装）
+sudo ln -sfn /opt/homebrew/opt/openjdk@21/libexec/openjdk.jdk /Library/Java/JavaVirtualMachines/openjdk-21.jdk
+```
+
+#### 3.1.2 手动安装
+
+1. 访问 Oracle 或 OpenJDK 网站下载 macOS 版本的 JDK .dmg 安装包
+2. 双击安装包，按提示完成安装
+
+### 3.2 环境变量配置
+
+1. 打开终端，编辑 shell 配置文件（~/.zshrc 或 ~/.bash_profile）
+2. 添加以下内容：
+
+```bash
+# Java 环境配置
+export JAVA_HOME=$(/usr/libexec/java_home -v 21)
+export PATH="$JAVA_HOME/bin:$PATH"
+export CLASSPATH=".:$JAVA_HOME/lib/tools.jar:$JAVA_HOME/lib/dt.jar"
+```
+
+3. 使配置立即生效：
+
+```bash
+source ~/.zshrc  # 或 source ~/.bash_profile
+```
+
+### 3.3 多版本 JDK 管理
+
+macOS 支持同时安装多个 JDK 版本，可通过以下方式管理：
+
+```bash
+# 查看已安装的 JDK
+/usr/libexec/java_home -V
+
+# 配置多版本别名
+echo 'export JAVA_8_HOME=$(/usr/libexec/java_home -v 1.8)
+export JAVA_11_HOME=$(/usr/libexec/java_home -v 11)
+export JAVA_17_HOME=$(/usr/libexec/java_home -v 17)
+export JAVA_21_HOME=$(/usr/libexec/java_home -v 21)
+
+# 设置默认版本
+export JAVA_HOME=$JAVA_21_HOME
+
+# 添加别名快速切换版本
+alias jdk8="export JAVA_HOME=$JAVA_8_HOME"
+alias jdk11="export JAVA_HOME=$JAVA_11_HOME"
+alias jdk17="export JAVA_HOME=$JAVA_17_HOME"
+alias jdk21="export JAVA_HOME=$JAVA_21_HOME"
+' >> ~/.zshrc
+```
+
+### 3.4 验证安装
+
+```bash
+java -version
+javac -version
+```
+
+## 4. Linux 环境配置
+
+### 4.1 使用包管理器安装
+
+#### 4.1.1 Ubuntu/Debian
+
+```bash
+# 更新包列表
+sudo apt-get update
+
+# 安装 JDK 21
+sudo apt-get install openjdk-21-jdk
 
 # 验证安装
 java -version
-javac -version
 ```
 
-对于其他 Linux 发行版，如 CentOS/RHEL 系统：
+#### 4.1.2 CentOS/RHEL/Fedora
 
 ```bash
-# 安装OpenJDK 11
-sudo yum install java-11-openjdk-devel
+# 安装 JDK 21
+sudo yum install java-21-openjdk-devel  # CentOS/RHEL
+# 或
+sudo dnf install java-21-openjdk-devel  # Fedora
 
-# 或者下载tar.gz包手动安装
-sudo tar -xzf jdk-11_linux-x64_bin.tar.gz -C /usr/local/
+# 验证安装
+java -version
 ```
 
-### 2.3 环境变量配置详解
-
-正确配置环境变量是确保Java开发工具正常工作的关键。
-
-#### Windows 平台环境变量配置
-
-1. 右击"此电脑" → "属性" → "高级系统设置" → "环境变量"
-2. 在"系统变量"中新建变量：
-   - 变量名：`JAVA_HOME`
-   - 变量值：JDK安装路径（如`C:\Program Files\Java\jdk-11.0.12`）
-3. 编辑"Path"变量，添加：`%JAVA_HOME%\bin`
-4. (可选)新建"CLASSPATH"变量，值为：`.;%JAVA_HOME%\lib\dt.jar;%JAVA_HOME%\lib\tools.jar;`
-
-#### macOS/Linux 环境变量配置
-
-编辑 shell 配置文件（~/.bashrc、~/.zshrc或~/.bash_profile）：
+### 4.2 手动安装 JDK
 
 ```bash
-# 设置JAVA_HOME
-export JAVA_HOME=$(/usr/libexec/java_home)  # macOS专用写法
-# 或者直接指定路径：export JAVA_HOME=/usr/lib/jvm/java-11-openjdk-amd64
+# 下载 JDK（以 Oracle JDK 21 为例）
+wget https://download.oracle.com/java/21/latest/jdk-21_linux-x64_bin.tar.gz
 
-# 将JDK工具添加到PATH
+# 创建安装目录
+sudo mkdir -p /usr/local/java
+
+# 解压到安装目录
+sudo tar -xzf jdk-21_linux-x64_bin.tar.gz -C /usr/local/java
+
+# 设置所有权
+sudo chown -R root:root /usr/local/java/
+```
+
+### 4.3 环境变量配置
+
+1. 创建全局 Java 环境配置：
+
+```bash
+sudo nano /etc/profile.d/java.sh
+```
+
+2. 添加以下内容：
+
+```bash
+# 设置 JAVA_HOME
+export JAVA_HOME=/usr/local/java/jdk-21
 export PATH=$JAVA_HOME/bin:$PATH
+export CLASSPATH=.:$JAVA_HOME/lib/dt.jar:$JAVA_HOME/lib/tools.jar
 ```
 
-使配置立即生效：
+3. 使配置生效：
 
 ```bash
-source ~/.bashrc  # 或其他使用的shell配置文件
+source /etc/profile.d/java.sh
 ```
 
-验证配置是否正确：
+4. 使用 alternatives 配置系统默认 Java（可选）：
+
+```bash
+sudo update-alternatives --install "/usr/bin/java" "java" "/usr/local/java/jdk-21/bin/java" 1
+sudo update-alternatives --install "/usr/bin/javac" "javac" "/usr/local/java/jdk-21/bin/javac" 1
+sudo update-alternatives --config java
+sudo update-alternatives --config javac
+```
+
+### 4.4 验证安装
 
 ```bash
 java -version
 javac -version
+which java
 echo $JAVA_HOME
 ```
 
-## 3 开发工具与 IDE 配置
+## 5. Docker 环境配置
 
-### 3.1 IntelliJ IDEA 配置
+### 5.1 编写 Dockerfile
 
-IntelliJ IDEA 是业界公认的强大 Java IDE，提供了智能代码助手、强大的调试功能和丰富的插件生态系统。
-
-#### 安装与初始配置
-
-1. 从<https://www.jetbrains.com/idea/download/下载适合版本（社区版免费，旗舰版需付费）>
-2. 首次启动配置：
-   - 选择主题（Darcula或Light）
-   - 安装常用插件（如CheckStyle、SonarLint）
-   - 配置JDK路径：File → Project Structure → SDKs → 添加JDK安装路径
-   - 设置编码：File → Settings → Editor → File Encodings → 统一设置为UTF-8
-
-#### 优化设置
-
-```json
-// 在IDEA的设置中，以下配置可提升开发效率：
-// 1. 开启自动导入包：Settings → Editor → General → Auto Import
-// 2. 调整代码样式：Settings → Editor → Code Style → Java
-// 3. 开启实时代码分析：Settings → Editor → Inspections
-// 4. 配置版本控制集成：Settings → Version Control → Git
-```
-
-### 3.2 Eclipse 配置
-
-Eclipse 是另一款流行的开源 Java IDE，特别适合大型项目和企业开发环境。
-
-#### 安装与配置
-
-1. 从<https://www.eclipse.org/downloads/下载Eclipse> IDE for Java Developers
-2. 安装后配置：
-   - Window → Preferences → Java → Installed JREs：添加JDK路径（非JRE）
-   - Window → Preferences → Java → Compiler：设置编译器合规级别
-   - Window → Preferences → General → Workspace：设置文本文件编码为UTF-8
-
-#### 常用插件推荐
-
-- **Checkstyle**：代码规范检查
-- **Eclipse Code Recommenders**：智能代码推荐
-- **Spring Tools**：Spring框架开发支持
-- **M2Eclipse**：Maven集成
-
-### 3.3 VS Code 配置
-
-VS Code 是一个轻量级但功能强大的编辑器，通过扩展支持 Java 开发。
-
-#### Java 开发环境配置
-
-1. 安装<https://marketplace.visualstudio.com/items?itemName=vscjava.vscode-java-pack>
-2. 配置JDK路径：Ctrl+Shift+P → 输入"Java: Configure Java Runtime"
-3. 常用Java扩展：
-   - Maven for Java
-   - Spring Boot Tools
-   - Debugger for Java
-   - Language Support for Java
-
-### 3.4 项目创建与配置
-
-在不同 IDE 中创建第一个 Java 项目：
-
-#### IntelliJ IDEA 项目创建
-
-1. File → New → Project
-2. 选择 Java → 选择 JDK 版本
-3. 选择模板（如命令行应用程序）
-4. 输入项目名称和位置
-5. 完成创建并编写代码
-
-#### Eclipse 项目创建
-
-1. File → New → Java Project
-2. 输入项目名称
-3. 选择 JRE 版本（使用已配置的 JDK）
-4. 完成创建并在src目录下创建包和类
-
-## 4 构建工具与依赖管理
-
-### 4.1 Maven 安装与配置
-
-Maven 是 Java 项目的主流构建和依赖管理工具之一。
-
-#### 安装步骤
-
-1. 从<https://maven.apache.org/download.cgi下载最新版本>
-2. 解压到合适目录（如`C:\Program Files\Apache\Maven\`或`/opt/maven/`）
-3. 配置环境变量：
-   - 新建`M2_HOME`：指向Maven安装目录
-   - 编辑`Path`：添加`%M2_HOME%\bin`
-
-验证安装：
-
-```bash
-mvn -v
-```
-
-#### 配置优化
-
-修改`~/.m2/settings.xml`配置镜像和本地仓库：
-
-```xml
-<settings>
-  <localRepository>D:\.m2\repository</localRepository>
-  <mirrors>
-    <mirror>
-      <id>aliyunmaven</id>
-      <name>阿里云公共仓库</name>
-      <url>https://maven.aliyun.com/repository/public</url>
-      <mirrorOf>central</mirrorOf>
-    </mirror>
-  </mirrors>
-</settings>
-```
-
-### 4.2 Gradle 安装与配置
-
-Gradle 是另一个强大的构建工具，结合了 Maven 的依赖管理和 Ant 的灵活性。
-
-#### 安装步骤
-
-1. 从<https://gradle.org/releases/下载最新版本>
-2. 解压到合适目录
-3. 配置环境变量：
-   - 新建`GRADLE_HOME`：指向 Gradle 安装目录
-   - 编辑`Path`：添加`%GRADLE_HOME%\bin`
-
-验证安装：
-
-```bash
-gradle -v
-```
-
-#### 配置优化
-
-创建或修改`~/.gradle/gradle.properties`：
-
-```properties
-org.gradle.daemon=true
-org.gradle.parallel=true
-org.gradle.caching=true
-```
-
-### 4.3 依赖管理最佳实践
-
-1. **依赖范围管理**：正确使用 Maven 的 dependency scope（compile、provided、test等）
-2. **版本一致性**：使用 BOM 或 dependencyManagement 统一管理依赖版本
-3. **排除传递依赖**：及时排除不需要的传递依赖，减少冲突
-4. **依赖安全扫描**：使用 OWASP Dependency-Check 等工具定期检查依赖安全性
-
-_表：Maven 与 Gradle 对比_
-
-| **特性** | **Maven**          | **Gradle**                |
-| -------- | ------------------ | ------------------------- |
-| 配置语言 | XML                | Groovy/Kotlin DSL         |
-| 性能     | 较慢               | 较快（支持增量构建）      |
-| 灵活性   | 结构化强，相对固定 | 高度灵活，可定制性强      |
-| 学习曲线 | 平缓               | 相对陡峭                  |
-| 社区生态 | 成熟，资源丰富     | 增长快速，Android官方选择 |
-
-## 5 跨平台开发环境配置指南
-
-### 5.1 Windows 环境配置
-
-Windows 是Java开发的主流平台之一，配置时需注意以下要点：
-
-#### 特定优化设置
-
-1. **禁用NTFS最后访问时间戳**（提升文件操作性能）：
-
-   ```cmd
-   fsutil behavior set disablelastaccess 1
-   ```
-
-2. **调整 PowerShell 执行策略**（便于执行脚本）：
-
-   ```powershell
-   Set-ExecutionPolicy RemoteSigned -Scope CurrentUser
-   ```
-
-3. **使用 Windows Terminal**：替代传统 CMD，提供更好的开发体验
-
-#### 常见问题解决
-
-- **端口冲突**：使用`netstat -ano | findstr "端口号"`查找占用进程
-- **权限问题**：对于需要管理员权限的操作，以管理员身份运行IDE或终端
-- **路径长度限制**：启用长路径支持（组策略 → 计算机配置 → 管理模板 → 文件系统 → 启用Win32长路径）
-
-### 5.2 Linux 环境配置
-
-Linux 是 Java 生产环境的首选平台，开发环境配置需关注以下方面：
-
-#### 发行版特定安装方法
-
-**Ubuntu/Debian**：
-
-```bash
-# 安装OpenJDK
-sudo apt update
-sudo apt install openjdk-11-jdk
-
-# 设置默认Java版本
-sudo update-alternatives --config java
-```
-
-**CentOS/RHEL**：
-
-```bash
-# 安装OpenJDK
-sudo yum install java-11-openjdk-devel
-
-# 或者使用tar包安装
-sudo tar -xzf jdk-11_linux-x64_bin.tar.gz -C /usr/local/
-sudo ln -s /usr/local/jdk-11 /usr/local/java
-```
-
-#### 性能优化配置
-
-1. **文件监视限制调整**（解决IDE"文件监视程序不足"错误）：
-
-   ```bash
-   echo 'fs.inotify.max_user_watches=524288' | sudo tee -a /etc/sysctl.conf
-   sudo sysctl -p
-   ```
-
-2. **Swapiness调整**（减少交换内存使用）：
-
-   ```bash
-   echo 'vm.swappiness=10' | sudo tee -a /etc/sysctl.conf
-   ```
-
-3. **最大文件打开数调整**：
-
-   ```bash
-   echo '* soft nofile 65536' | sudo tee -a /etc/security/limits.conf
-   echo '* hard nofile 65536' | sudo tee -a /etc/security/limits.conf
-   ```
-
-### 5.3 macOS 环境配置
-
-macOS 是 Java 开发提供了稳定的 Unix 环境，配置时需注意：
-
-#### 特定配置步骤
-
-1. 使用 Homebrew 安装管理 JDK（推荐）：
-
-   ```bash
-   # 安装 Homebrew（如果未安装）
-   /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
-
-   # 安装 JDK
-   brew install --cask temurin11
-   ```
-
-2. 配置多版本 JDK 管理：
-
-   ```bash
-   # 在~/.zshrc或~/.bash_profile中添加
-   export JAVA_HOME=$(/usr/libexec/java_home -v11)
-
-   # 切换JDK版本函数
-   jdk() {
-     export JAVA_HOME=$(/usr/libexec/java_home -v$1)
-     java -version
-   }
-   ```
-
-#### 性能与体验优化
-
-1. **启用 macOS 原生通知**：在 IDE 中启用系统原生通知，减少干扰
-2. **优化 Dock 行为**：为 IDE 设置 "在应用程序中保持" 选项，避免意外隐藏
-3. **使用 macOS 特定性能工具**：如 Instruments 进行性能分析
-
-### 5.4 Docker 开发环境配置
-
-Docker 提供了隔离且一致的 Java 开发环境，适合团队协作和复杂项目。
-
-#### Dockerfile 最佳实践
+创建适用于 Java 应用的 Dockerfile：
 
 ```dockerfile
-# 使用官方 OpenJDK 镜像作为基础
-FROM openjdk:11-jdk-slim
-
-# 设置工作目录
+# 多阶段构建：构建阶段
+FROM maven:3.9.5-eclipse-temurin-21-alpine AS build
 WORKDIR /app
-
-# 复制项目文件和构建配置
 COPY pom.xml .
 COPY src ./src
+RUN mvn clean package -DskipTests
 
-# 构建应用
-RUN mvn package -DskipTests
+# 多阶段构建：运行阶段
+FROM eclipse-temurin:21-jre-alpine
 
-# 设置容器启动命令
-CMD ["java", "-jar", "target/myapp.jar"]
+# 创建非root用户运行容器（安全最佳实践）
+RUN addgroup -S javagroup && adduser -S javauser -G javagroup
+USER javauser
 
-# 配置环境变量
-ENV JAVA_OPTS="-Xms512m -Xmx1024m"
-ENV JAVA_TOOL_OPTIONS="-Dfile.encoding=UTF8"
+WORKDIR /app
+
+# 从构建阶段复制jar文件
+COPY --from=build --chown=javauser:javagroup /app/target/*.jar app.jar
+
+# 优化JVM参数用于容器环境
+ENV JAVA_OPTS="-Djava.security.egd=file:/dev/./urandom -XX:MaxRAMPercentage=80.0 -XX:+UseContainerSupport"
+
+# 暴露端口
+EXPOSE 8080
+
+# 健康检查
+HEALTHCHECK --interval=30s --timeout=10s --retries=3 \
+  CMD curl --fail http://localhost:8080/actuator/health || exit 1
+
+# 启动应用
+ENTRYPOINT ["sh", "-c", "java $JAVA_OPTS -jar app.jar"]
 ```
 
-#### Docker Compose 开发环境配置
+### 5.2 构建和运行容器
 
-创建`docker-compose.yml`文件：
+```bash
+# 构建 Docker 镜像
+docker build -t my-java-app:1.0 .
+
+# 运行容器
+docker run -d \
+  --name java-app \
+  -p 8080:8080 \
+  -e JAVA_OPTS="-XX:MaxRAMPercentage=75.0" \
+  --memory="512m" \
+  --cpus="1.0" \
+  my-java-app:1.0
+
+# 查看日志
+docker logs -f java-app
+```
+
+### 5.3 Docker Compose 部署
+
+创建 docker-compose.yml 文件：
 
 ```yaml
 version: '3.8'
+
 services:
   app:
     build: .
     ports:
       - '8080:8080'
+    environment:
+      - SPRING_PROFILES_ACTIVE=prod
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/mydb
+      - JAVA_OPTS=-XX:MaxRAMPercentage=80.0
+    depends_on:
+      - db
+    networks:
+      - java-network
+    deploy:
+      resources:
+        limits:
+          memory: 512m
+          cpus: '0.5'
+
+  db:
+    image: postgres:13-alpine
+    environment:
+      - POSTGRES_DB=mydb
+      - POSTGRES_USER=myuser
+      - POSTGRES_PASSWORD=mypassword
     volumes:
-      - .:/app
-      - m2-repo:/root/.m2
-    environment:
-      - JAVA_OPTS=-Xms512m -Xmx1024m -Dspring.profiles.active=dev
-  database:
-    image: postgres:13
-    environment:
-      POSTGRES_DB: mydb
-      POSTGRES_USER: user
-      POSTGRES_PASSWORD: pass
+      - postgres-data:/var/lib/postgresql/data
+    networks:
+      - java-network
 
 volumes:
-  m2-repo:
+  postgres-data:
+
+networks:
+  java-network:
+    driver: bridge
 ```
 
-#### 开发阶段实用命令
+启动服务：
 
 ```bash
-# 构建镜像
-docker build -t my-java-app .
-
-# 运行容器
-docker run -it -p 8080:8080 -v $(pwd):/app my-java-app
-
-# 使用Docker Compose启动全套环境
 docker-compose up -d
-
-# 查看容器日志
-docker logs -f container_name
-
-# 进入容器shell
-docker exec -it container_name /bin/bash
 ```
 
-## 6 进阶配置与最佳实践
+_表：Java Docker 容器优化参数_
 
-### 6.1 JVM 调优与性能配置
+| **参数**                   | **示例值**            | **说明**                          |
+| -------------------------- | --------------------- | --------------------------------- |
+| `-XX:MaxRAMPercentage`     | `80.0`                | JVM 最大堆内存占容器内存的百分比  |
+| `-XX:+UseContainerSupport` | N/A                   | 启用容器支持（Java 10+ 默认启用） |
+| `-Djava.security.egd`      | `file:/dev/./urandom` | 加速随机数生成器，加快启动速度    |
+| `--memory`                 | `512m`                | 限制容器最大内存使用量            |
+| `--cpus`                   | `1.0`                 | 限制容器 CPU 使用量               |
 
-合理的 JVM 参数配置对应用性能至关重要，以下是一些常用配置：
+## 6. 跨平台开发建议
 
-#### 内存设置
+### 6.1 一致的项目结构
 
-```bash
-# 设置初始和最大堆大小（根据应用需求调整）
--Xms512m -Xmx1024m
+保持所有开发环境中的项目结构一致：
 
-# 设置年轻代大小
--XX:NewSize=256m -XX:MaxNewSize=256m
-
-# 设置元空间大小（Java 8+）
--XX:MetaspaceSize=128m -XX:MaxMetaspaceSize=256m
+```java
+my-java-project/
+├── src/
+│   ├── main/
+│   │   ├── java/          # Java 源代码
+│   │   └── resources/     # 资源文件
+│   └── test/
+│       ├── java/          # 测试代码
+│       └── resources/     # 测试资源
+├── target/                # 构建输出（可添加到 .gitignore）
+├── pom.xml               # Maven 配置
+└── README.md
 ```
 
-#### 垃圾回收优化
+### 6.2 使用构建工具
 
-```bash
-# 使用G1垃圾收集器（推荐用于大内存应用）
--XX:+UseG1GC
+#### 6.2.1 Maven 配置
 
-# 设置GC日志
--Xlog:gc*:file=gc.log:time,uptime:filecount=5,filesize=10M
-
-# 并行GC设置（适用于多核处理器）
--XX:+UseParallelGC -XX:+UseParallelOldGC
-```
-
-#### 诊断与监控
-
-```bash
-# 启用JMX远程监控
--Dcom.sun.management.jmxremote.port=9010
--Dcom.sun.management.jmxremote.authenticate=false
--Dcom.sun.management.jmxremote.ssl=false
-
-# 生成堆转储文件
--XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/path/to/dumps
-```
-
-### 6.2 容器化环境最佳实践
-
-#### 构建高效的 Java 容器镜像
-
-```dockerfile
-# 多阶段构建：减少最终镜像大小
-FROM openjdk:11-jdk-slim as builder
-WORKDIR /app
-COPY . .
-RUN mvn package -DskipTests
-
-# 创建轻量级运行时镜像
-FROM openjdk:11-jre-slim
-WORKDIR /app
-COPY --from=builder /app/target/myapp.jar app.jar
-
-# 使用非root用户运行
-RUN groupadd -r javaapp && useradd -r -g javaapp javaapp
-USER javaapp
-
-# 优化容器启动参数
-ENTRYPOINT ["java", "-XX:+UseContainerSupport", "-jar", "/app.jar"]
-```
-
-#### 容器特定 JVM 优化
-
-```bash
-# 启用容器支持（Java 10+）
--XX:+UseContainerSupport
-
-# 根据容器限制自动计算内存参数
--XX:MaxRAMPercentage=75.0
-
-# 适应容器环境的GC设置
--XX:+UseG1GC -XX:MaxGCPauseMillis=200
-```
-
-### 6.3 安全加固配置
-
-#### JDK 安全强化
-
-1. **禁用弱加密算法**：
-
-   ```bash
-   # 在java.security文件中修改
-   jdk.tls.disabledAlgorithms=SSLv3, TLSv1, TLSv1.1, RC4, DES, MD5withRSA
-   ```
-
-2. **限制 JNDI 访问**（防止 LDAP 注入）：
-
-   ```bash
-   -Dcom.sun.jndi.ldap.object.trustURLCodebase=false
-   ```
-
-3. **启用安全管理器**（适用于高安全需求环境）：
-
-   ```bash
-   -Djava.security.manager -Djava.security.policy==/path/to/security.policy
-   ```
-
-#### 依赖安全扫描
-
-集成OWASP Dependency-Check到构建流程：
+配置 pom.xml 确保跨平台一致性：
 
 ```xml
-<!-- Maven配置示例 -->
-<plugin>
-  <groupId>org.owasp</groupId>
-  <artifactId>dependency-check-maven</artifactId>
-  <version>6.5.3</version>
-  <executions>
-    <execution>
-      <goals>
-        <goal>check</goal>
-      </goals>
-    </execution>
-  </executions>
-</plugin>
+<project>
+  <modelVersion>4.0.0</modelVersion>
+  <groupId>com.example</groupId>
+  <artifactId>my-project</artifactId>
+  <version>1.0.0</version>
+
+  <properties>
+    <maven.compiler.source>21</maven.compiler.source>
+    <maven.compiler.target>21</maven.compiler.target>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+  </properties>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.11.0</version>
+        <configuration>
+          <compilerArgs>
+            <arg>-parameters</arg>
+          </compilerArgs>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+</project>
 ```
 
-### 6.4 CI/CD 集成配置
+#### 6.2.2 Gradle 配置
 
-#### GitHub Actions 工作流示例
+配置 build.gradle 确保跨平台一致性：
 
-创建`.github/workflows/maven.yml`：
+```gradle
+plugins {
+    id 'java'
+    id 'org.springframework.boot' version '3.2.0'
+}
+
+group = 'com.example'
+version = '1.0.0'
+
+java {
+    sourceCompatibility = JavaVersion.VERSION_21
+    targetCompatibility = JavaVersion.VERSION_21
+}
+
+repositories {
+    mavenCentral()
+}
+
+dependencies {
+    implementation 'org.springframework.boot:spring-boot-starter-web:3.2.0'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test:3.2.0'
+}
+
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
+    options.compilerArgs += ['-parameters']
+}
+
+test {
+    useJUnitPlatform()
+}
+```
+
+### 6.3 CI/CD 配置
+
+创建 GitHub Actions 工作流确保跨平台构建一致性：
 
 ```yaml
 name: Java CI
@@ -603,83 +484,58 @@ on: [push, pull_request]
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest, macos-latest]
+        java: [21, 17, 11]
 
     steps:
-      - uses: actions/checkout@v2
-      - name: Set up JDK 11
-        uses: actions/setup-java@v2
+      - uses: actions/checkout@v4
+
+      - name: Set up JDK ${{ matrix.java }}
+        uses: actions/setup-java@v3
         with:
-          java-version: '11'
-          distribution: 'adopt'
+          java-version: ${{ matrix.java }}
+          distribution: 'temurin'
           cache: 'maven'
+
       - name: Build with Maven
-        run: mvn -B package --file pom.xml
+        run: mvn -B clean package --file pom.xml
+
       - name: Run tests
-        run: mvn test
-      - name: Perform vulnerability check
-        run: mvn org.owasp:dependency-check-maven:check
+        run: mvn -B test --file pom.xml
 ```
 
-#### Jenkins 管道配置
+## 7. 总结与最佳实践
 
-创建`Jenkinsfile`：
+### 7.1 环境配置最佳实践
 
-```groovy
-pipeline {
-    agent any
-    tools {
-        jdk 'jdk11'
-        maven 'maven-3.6'
-    }
-    stages {
-        stage('Build') {
-            steps {
-                sh 'mvn -B compile'
-            }
-        }
-        stage('Test') {
-            steps {
-                sh 'mvn test'
-            }
-            post {
-                always {
-                    junit 'target/surefire-reports/*.xml'
-                }
-            }
-        }
-        stage('Security Scan') {
-            steps {
-                dependencyCheck additionalArguments: '--scan target/*.jar --format HTML'
-                dependencyCheckPublisher pattern: '**/dependency-check-report.xml'
-            }
-        }
-    }
-}
-```
+1. **一致性**：确保所有环境（开发、测试、生产）使用相同的 JDK 版本和配置
+2. **版本控制**：将开发环境配置（如 Dockerfile、Maven 配置）纳入版本控制系统
+3. **自动化**：使用脚本或工具（如 SDKMAN）自动化环境设置过程
+4. **文档化**：记录团队开发环境设置标准和流程
 
-## 7 总结与后续学习建议
+### 7.2 容器化最佳实践
 
-通过本文的详细讲解，您应该已经掌握了在不同平台上配置 Java 开发环境的全面知识。从基础的 JDK 安装和环境变量配置，到高级的容器化部署和性能优化，这些技能将为您的 Java 开发之旅奠定坚实基础。
+1. **使用多阶段构建**：减少最终镜像大小，提高安全性
+2. **使用轻量级基础镜像**：选择 alpine 或 slim 版本的镜像
+3. **非 root 用户运行**：提高容器安全性
+4. **优化 JVM 参数**：根据容器环境调整内存设置
+5. **定期更新基础镜像**：修复安全漏洞
 
-### 7.1 关键知识点回顾
+### 7.3 性能优化建议
 
-1. **JDK 选择**：根据需求选择合适的 JDK 发行版和版本（推荐 Java 11 或 17 LTS）
-2. **环境配置**：正确设置 JAVA_HOME 和 PATH 环境变量是基础关键
-3. **工具链搭建**：IDE、构建工具和版本控制系统的合理配置极大提升开发效率
-4. **跨平台适配**：针对 Windows、Linux、macOS 和 Docker 环境的特定优化配置
-5. **性能与安全**：JVM 调优、容器化部署和安全加固是生产环境必备知识
+1. **IDE 优化**：为 IntelliJ IDEA 或 Eclipse 分配足够内存
+2. **构建优化**：配置 Maven/Gradle 使用并行构建和构建缓存
+3. **依赖管理**：定期清理未使用的依赖，减少构建时间
+4. **容器资源限制**：为 Java 容器设置适当的内存和 CPU 限制
 
-### 7.2 后续学习方向
+### 7.4 故障排除技巧
 
-为了进一步提升 Java 开发技能，建议您探索以下方向：
+1. **版本冲突**：使用 `mvn dependency:tree` 检查依赖冲突
+2. **内存问题**：调整 JVM 内存参数（Xms, Xmx, MaxRAMPercentage）
+3. **编码问题**：统一所有环境使用 UTF-8 编码
+4. **路径问题**：避免在代码中使用绝对路径，使用相对路径或类路径资源
 
-1. **深入学习 JVM**：了解垃圾回收机制、类加载过程和字节码优化
-2. **掌握微服务开发**：学习 Spring Boot、Spring Cloud 等现代 Java 开发框架
-3. **云原生 Java**：探索 Kubernetes、Service Mesh 等云原生技术在 Java 应用中的应用
-4. **性能优化高级技巧**：学习使用 APM 工具、性能剖析和调优技术
-5. **DevOps 实践**：将 CI/CD、基础设施即代码等实践融入 Java 开发流程
-
-Java 生态系统在不断演进，保持学习的心态和习惯是成为优秀 Java 开发者的关键。希望本文为您提供了扎实的起点，助您在 Java 开发道路上走得更远。
-
-> 注意：本文中的配置示例和最佳实践基于当前主流技术和版本，随着技术发展可能需要进行调整。建议定期查阅官方文档和社区资源，保持配置的时效性和安全性。
+通过遵循本指南中的建议，您可以建立一个高效、一致且可维护的 Java 开发环境，无论是在 Windows、macOS、Linux 还是 Docker 容器中。定期回顾和更新您的环境配置，以跟上 Java 生态系统的快速发展。
